--- a/index.html
+++ b/index.html
@@ -1,2 +1,53 @@
-<p>Hello 大家好<p>
-<a href = "https://www.jianshu.com/u/4d6bd5891e02">简书</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Blog</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            margin-top: 50px;
+        }
+        h1 {
+            text-align: center;
+            color: #333333;
+        }
+        p {
+            text-align: center;
+            color: #666666;
+            margin-bottom: 20px;
+        }
+        .blog-link {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .blog-link:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to My Blog</h1>
+        <p>This is my personal website where you can explore my blog.</p>
+        <a href="https://yourblogurl.com" class="blog-link">Explore My Blog</a>
+    </div>
+</body>
+</html>
