--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
         <h1>Welcome to My Blog</h1>
         <p>This is my personal website where you can explore my blog.</p>
-        <a href="https://yourblogurl.com" class="blog-link">Explore My Blog</a>
+        <a href="https://www.jianshu.com/u/4d6bd5891e02" class="blog-link">Explore My Blog</a>
     </div>
 </body>
 </html>
