--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             color: #666666;
             margin-bottom: 20px;
         }
+        .blog-link-container {
+            display: flex;
+            justify-content: center;
+        }
         .blog-link {
-            display: inline-block;
             padding: 10px 20px;
             background-color: #007bff;
             color: #ffffff;
