--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             flex-direction: column; /* 垂直布局 */
         }
         .avatar {
-            width: 150px; /* 调整头像大小 */
-            border-radius: 50%; /* 圆形 */
+            width: 300px; /* 调整海报宽度 */
+            height: auto; /* 高度自动调整以保持纵横比 */
             margin-bottom: 20px;
+            border-radius: 8px; /* 如果需要，可以添加圆角 */
         }
         .blog-link {
             padding: 10px 20px;
@@ -59,9 +60,9 @@
         <h1>Welcome to My Blog</h1>
         <p>This is my personal website where you can explore my blog and find me on other platforms.</p>
         <div class="blog-link-container">
-            <img src="https://pixabay.com/photos/forest-road-trees-car-lake-water-4450611/" alt="Avatar" class="avatar"> <!-- 替换 "avatar.jpg" 为您的头像图片路径 -->
             <a href="https://www.jianshu.com/u/4d6bd5891e02" class="blog-link">Explore My Blog</a>
             <a href="https://www.xiaohongshu.com/user/profile/6471d187000000002a03561e?xhsshare=CopyLink&appuid=6471d187000000002a03561e&apptime=1715668771" class="blog-link">Find Me on xiaohongshu</a>
+            <img src="https://www.xiaohongshu.com/explore/6640527d000000001e01e860/" alt="Avatar" class="avatar"> <!-- 替换 "avatar.jpg" 为您的头像图片路径 -->
         </div>
     </div>
 </body>
