--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="blog-link-container">
             <a href="https://www.jianshu.com/u/4d6bd5891e02" class="blog-link">Explore My Blog</a>
             <a href="https://www.xiaohongshu.com/user/profile/6471d187000000002a03561e?xhsshare=CopyLink&appuid=6471d187000000002a03561e&apptime=1715668771" class="blog-link">Find Me on xiaohongshu</a>
-            <img src="https://www.xiaohongshu.com/explore/6640527d000000001e01e860/" alt="Avatar" class="avatar"> <!-- 替换 "avatar.jpg" 为您的头像图片路径 -->
+            <img src="https://www.xiaohongshu.com/explore/6640527d000000001e01e860/">
         </div>
     </div>
 </body>
